ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: hashnode
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /node
          pathType: Prefix
          backend:
            service:
              name: arm-tasks-lb-service
              port:
                number: 80
        - path: /go
          pathType: Prefix
          backend:
            service:
              name: arm-tasks-lb-service
              port:
                number: 9090
